# votca

./: .clang-format  .codacy.yml  .codecov.yml  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .hgignore  .hgtags  .remarkrc.yaml  .travis.yml  .zenodo.json  AddAtom  Architecture.rst  CHANGELOG  CHANGELOG.md  CHANGELOG.rst  CHANGELOG.t2t  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.rst  CONTRIBUTING.md  DEVELOPERS_GUIDE.md  DEVELOPERS_README.dox  DEVELOPERS_README.md  LICENSE.md  LICENSE.rst  Makefile  Makefile.am  NOTICE  NOTICE.rst  PAR_to_POT.pl  README  README.md  README.rst  SimplexFunctions.pm  add_pot_tf.sh  advanced_topics.rst  advanced_topics.tex  (+79 more)
csg/: .codecov.yml  .gitignore  CHANGELOG.rst  CMakeLists.txt  LEGACY_CHANGELOG.rst  LICENSE.rst  Makefile.am  NOTICE.rst  README.rst  analysistool.h  main.cc  stdanalysis.cc  tabulatedpotential.cc  version.h
csg-tutorials/: .gitignore  CMakeLists.txt  README.rst
csg-tutorials/CMakeModules/: CheckFunctionExists.cpp  FindESPRESSOPP.cmake  FindLMP.cmake
csg-tutorials/guide/: README.rst
csg-tutorials/scripts/: Extract_Energies.sh
csg/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  configurations.xml  project.xml
csg/scripts/: CMakeLists.txt  csg_call  csg_call.in  csg_inverse
csg/share/: CMakeLists.txt
csg/src/: CMakeLists.txt
include/: CMakeLists.txt  Makefile.am  akimaspline.h  application.h  atomqmtopology.h  average.h  basis_set.h  bead.h  beadinfo.h  beadlist.h  beadpair.h  beadtype.h  boundarycondition.h  calc_integrals.h  calculatorfactory.h  cgengine.h  cgmoleculedef.h  cgobserver.h  configuration.h  connectivity.h  cont_kmc.h  correlate.h  cp  crgtopology.h  crgunit.h  crgunittype.h  crosscorrelate.h  csgapplication.h  ctp_calculator.h  cubicspline.cpp  cubicspline.h  database.h  datacollection.h  easylock.h  exclusionlist.h  fileformatfactory.h  fock_matrix.h  global.h  histogram.h  histogramnew.h  (+68 more)
include/calculators/: avgvelocity.h
scripts/: CMakeLists.txt  CSGRC.bash.in  CSGRC.csh.in  Extract_Energies.sh  Extract_Energies_with_bonded.sh  Extract_Energies_with_bonded_tabulated.sh  Makefile.am  ProJ-eff.py  VOTCARC.bash.in  VOTCARC.csh.in  allplots.gp  analyze.sh  bbox_add.pl  build  completion.bash  convergence.sh  counterpoise.sh  csg-completion.bash  csg-completion.bash.in  csg.rc.bash.in  csg.rc.csh.in  csg_call  csg_call.in  csg_call.sh  csg_inverse  csg_inverse.in  csg_pmf  csg_table  ctp_basisset  ctp_basisset.in  ctp_dipro  ctp_dipro.in  ctp_testsuite.in  ctp_update.in  ctp_update_exciton  ctp_update_exciton.in  help2t2t.in  help2t2t.sh  help_to_rst.py  help_to_rst_man.py  (+18 more)
scripts/inverse/: RDF_to_POT.pl  add_POT.pl  calc_pressure_gromacs.sh  calc_rdf_espresso.sh  convergence_check_default.sh  convergence_check_re.sh  functions_espresso.sh  functions_gromacs.sh  imc_stat_generic.sh  imcdata_from_blocks.octave  initialize_step_generic_espresso.sh  initialize_step_generic_gromacs.sh  post_update_generic.sh  postadd_overwrite.sh  potential_extrapolate.sh  prepare_generic.sh  prepare_ibm.sh  pressure_cor_simple.pl  pressure_cor_wjk.pl  run_espresso.sh  simplex_downhill_processor.pl  table_extrapolate.pl  table_linearop.pl  table_scale.pl  table_to_tab.pl  tag_file.sh  update_re.sh
share/benchmark/: CMakeLists.txt  dftgwbse.xml  gwbse.xml  xtp_benchmark.in
share/doc/: Architecture.rst  CMakeLists.txt  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.rst  CSG-MANUAL.md  CSG-MANUAL.rst  CSG-TUTORIAL.md  CSG-TUTORIAL.rst  DEVELOPERS_GUIDE.md  DEVELOPERS_GUIDE.rst  DEVELOPERS_README.dox  Doxyfile  Doxyfile.in  INSTALL.md  INSTALL.rst  Makefile.am  VOTCA_LANGUAGE_GUIDE.md  VOTCA_LANGUAGE_GUIDE.rst  XTP-MANUAL.md  XTP-MANUAL.rst  XTP-TUTORIAL.md  XTP-TUTORIAL.rst  advanced_topics.rst  bibliography.rst  cgoptions.xml  conf.py.in  dftgwbse.rst  extract_metadata.py  extract_xml_metadata.py  help.rst  index.rst  input_files.rst  installation.dox  introduction.rst  main.dox  methods.rst  preparing.rst  qmpackages.rst  reference.rst  theory.rst  (+30 more)
share/doxygen/: CMakeLists.txt
share/format/: CMakeLists.txt
share/man/: CMakeLists.txt  Makefile.am  votca-csg.man.in  votca-csg.t2t  votca-csg.t2t.in  votca-tools.man  votca-tools.man.in  votca-tools.t2t  votca-tools.t2t.in
share/template/: CMakeLists.txt  CMakeLists.txt.template  Makefile.am  Makefile.template  template.cc  template_nblist.cc  template_serial.cc  template_threaded.cc
share/xml/: CMakeLists.txt  INDOParameters.xml  Makefile.am  StateServer.xml  XQMultipole.xml  bsecoupling.xml  cginteraction.xml  cgoptions.xml  cgpolar.xml  coupling.xml  csg_defaults.xml  csg_defaults.xml.in  ctp_listcharges.xml  density.xml  dft.xml  diffusion.xml  diffusiontensor.xml  diode.xml  eanalyze.xml  ecorrelation.xml  ecoulomb.xml  edft.xml  egaussian.xml  egwbse.xml  ehistogram.xml  eimport.xml  einternal.xml  emultipole.xml  emultipole.xml.orig  energy2xml.xml  eoutersphere.xml  esp2multipole.xml  espfit.xml  etinker.xml  ewald.xml  ewdbgpol.xml  exciton.xml  excitoncoupling.xml  gencube.xml  gwbse.xml  (+58 more)
src/: CMakeLists.txt  KSpace.hpp  Makefile.am  QDMEwald.hpp  RSpace.hpp  csg_ndens.cc  csg_nemat.cc  csg_update.cc  dummy.cpp  kokkos_linalg.hpp  molden_writer.cc  template.cc
src/QDMEwald/: CMakeLists.txt  README.md
src/csg/: Makefile.am  analysistool.h  bondedstatistics.cc  bondedstatistics.h  main.cc  stdanalysis.cc  tabulatedpotential.cc  version.h
src/csg_boltzmann/: CMakeLists.txt  Makefile.am  analysistool.h  bondedstatistics.cc  bondedstatistics.h  main.cc  stdanalysis.cc  stdanalysis.h  tabulatedpotential.cc  tabulatedpotential.h
src/csgapps/: CMakeLists.txt  README.rst
src/dipro/: CMakeLists.txt  DIPRO-TI.f90  mergeorbitals.f90  output.f90  precmod.f90  (+4 more)
tests/: CMakeLists.txt  test_kspace.cpp  test_linalg_3d.cpp
tools/: .gitignore  CHANGELOG.rst  CMakeLists.txt  LEGACY_CHANGELOG.rst  NOTICE  README.rst
xtp/: .codecov.yml  .gitignore  Architecture.rst  CHANGELOG.rst  CMakeLists.txt  LEGACY_CHANGELOG.rst  NOTICE.rst  README.rst  Readme.md
xtp-tutorials/: .gitignore  CMakeLists.txt  README.rst  clean_notebooks.sh
(+6971 files in other folders)
